@@ -153,7 +153,7 @@ a short description and we'll add it to the
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
-Oct&nbsp;1&nbsp;2001
+Oct&nbsp;1&nbsp;2002
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td><font face="Arial,helvetica,geneva,sans-serif,lucida">
@@ -163,6 +163,22 @@ Oct&nbsp;1&nbsp;2001
 </font></td></tr>
 
 -->
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Mar&nbsp;12&nbsp;2002
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade port to Windows</B>
+<P>
+'Dragon Master' has created an easy-to-install
+<a href="http://primates.ximian.com/~damon/glade/WinGlade.exe">Glade port to
+Windows</a>. It has a few problems, and the generated code doesn't build yet,
+so beware!
+</font></td></tr>
 
 
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
