@@ -1,3 +1,7 @@
+2002-03-12  Damon Chaplin  <damon@ximian.com>
+
+	* index.html: added link to Glade port to windows.
+
 2002-03-06  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added HushTones IM.
